--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "prisma": "^6.8.2"
   }
 }
