--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx ts-node-dev src/index.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.22",
     "@types/node": "^22.15.29",
+    "prisma": "^6.9.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@prisma/client": "^6.9.0",
     "axios": "^1.9.0",
-    "express": "^4.21.2",
-    "prisma": "^6.8.2"
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2"
   }
 }
